--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Youtube Study-Buddy Extension</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="popup.js" defer></script>
 </head>
 <body>
     HI
